--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -31,11 +31,13 @@ dependencies:
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_offline: ^4.0.0
   meta: ^1.16.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_lints: ^5.0.0
