--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  google_maps_flutter: ^2.2.0
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
