--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_secure_storage: ^8.0.0
   google_maps_flutter: ^2.2.0
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
@@ -35,6 +36,7 @@ dependencies:
   equatable: ^2.0.7
   flutter:
     sdk: flutter
+  http: ^1.4.0
   flutter_bloc: ^9.1.1
   flutter_offline: ^4.0.0
   meta: ^1.16.0
