--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -28,19 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_secure_storage: ^8.0.0
-  google_maps_flutter: ^2.2.0
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   equatable: ^2.0.7
   flutter:
     sdk: flutter
-  http: ^1.4.0
   flutter_bloc: ^9.1.1
   flutter_offline: ^4.0.0
+  flutter_secure_storage: ^8.0.0
+  google_maps_flutter: ^2.2.0
+  http: ^1.4.0
   meta: ^1.16.0
   shared_preferences: ^2.5.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
